[gd_scene load_steps=6 format=2]

[ext_resource path="res://colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://Scripts/mage.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.73285, 7.65329 )

[node name="mage" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.176471, 1, 0.00784314, 1 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 384, 16, 16, 16 )

[node name="Vision" type="Area2D" parent="."]
visible = false
modulate = Color( 1, 0.960784, 0, 1 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 7.98851, 7.56807 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_Vision_body_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
